# xylem

./: .editorconfig  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  codecov.yml  deny.toml  flake.nix  rustfmt.toml  test_http_minimal.rs
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  deploy-docs.yml
book/: README.md  book.toml  wrangler.toml
book/src/: SUMMARY.md  introduction.md
book/src/advanced/: extending.md  metrics.md  performance.md
book/src/architecture/: core.md  overview.md  protocols.md  transports.md
book/src/contributing/: setup.md  style.md  testing.md
book/src/examples/: custom-workload.md  http.md  multi-protocol.md  redis.md
book/src/getting-started/: basic-usage.md  installation.md  quick-start.md
book/src/guide/: cli-reference.md  configuration.md  output-formats.md  protocols.md  transports.md
book/src/guide/configuration/: protocol.md  transport.md  workload.md
book/src/guide/protocols/: custom.md  http.md  masstree.md  memcached.md  redis.md  xylem-echo.md
book/src/guide/transports/: tcp.md  tls.md  udp.md  unix.md
book/src/reference/: changelog.md  license.md  schema.md
book/theme/: custom.css
examples/: feature_showcase.rs  redis-cluster-basic.toml  redis-cluster-hash-tags.toml  redis-cluster-mixed-workload.toml
profiles/: closed-loop-max-throughput.toml  http-spike.toml  latency-agent.toml  memcached-ramp.toml  multi-protocol-example.toml  poisson-heterogeneous.toml  redis-all-features.toml  redis-bench.toml  redis-data-import.toml  redis-gaussian-keys.toml  redis-get-zipfian.toml  redis-per-command-keys.toml  request-dump-demo.toml  traffic-groups-example.toml
profiles/redis/production/: README.md  facebook-tao-workload.toml
profiles/redis/ycsb/: README.md  ycsb-workload-a.toml  ycsb-workload-b.toml  ycsb-workload-c.toml  ycsb-workload-d.toml  ycsb-workload-e.toml  ycsb-workload-f.toml
schema/: profile.schema.json
tests/masstree/: Dockerfile  docker-compose.yml
tests/memcached/: docker-compose.yml
tests/multi-protocol/: docker-compose.yml
tests/nginx/: docker-compose.yml  nginx.conf
tests/redis/: docker-compose.yml  redis-bench.toml  redis-get-zipfian.toml
tests/redis-acl/: docker-compose.yml  redis.acl
tests/redis-auth/: docker-compose.yml
tests/redis-cluster/: docker-compose.yml
xylem-cli/: Cargo.toml
xylem-cli/examples/: redis-auth-and-new-commands.rs  redis_basic.rs  redis_cluster_protocol.rs  redis_cluster_slots.rs  redis_cluster_topology.rs  sketch_precision_comparison.rs
xylem-cli/profiles/: closed-loop-max-throughput.toml  http-spike.toml  memcached-ramp.toml  poisson-heterogeneous.toml  redis-get-zipfian.toml
xylem-cli/src/: completions.rs  config.rs  lib.rs  main.rs  multi_protocol.rs  output.rs
xylem-cli/src/output/: html.rs
xylem-cli/tests/: config_tests.rs  data_import_integration.rs  distribution_integration.rs  guard_lifecycle_integration.rs  http_integration.rs  masstree_integration.rs  memcached_integration.rs  multi_protocol_integration.rs  pipelining_integration.rs  rate_accuracy.rs  rate_control_integration.rs  redis_cluster_integration.rs  redis_integration.rs  redis_new_commands_integration.rs  redis_pipelined.rs  rich_output_integration.rs  scheduler_integration.rs  scheduler_round_robin.rs  sketch_precision_test.rs  transport_integration.rs  tuple_stats_integration.rs  zipfian_workload.rs  zipfian_workload_integration.rs
xylem-cli/tests/common/: masstree.rs  memcached.rs  mod.rs  multi_protocol.rs  nginx.rs  redis.rs  redis_acl.rs  redis_auth.rs  redis_cluster.rs
xylem-common/: Cargo.toml
xylem-common/src/: distributions.rs  lib.rs  request.rs
xylem-core/: Cargo.toml
xylem-core/examples/: echo_benchmark.rs  echo_unix_benchmark.rs
xylem-core/src/: config.rs  connection.rs  error.rs  lib.rs  request.rs  request_dump.rs  scheduler.rs  seed.rs  timing.rs  traffic_group.rs
xylem-core/src/scheduler/: connection_selector.rs  mod.rs  policy.rs  ready_heap.rs  temporal.rs  timing_policy.rs
xylem-core/src/stats/: analysis.rs  collector.rs  dumper.rs  group_collector.rs  metadata.rs  mod.rs  sampler.rs  tuple_collector.rs
xylem-core/src/threading/: affinity.rs  barrier.rs  mod.rs  pipelined_worker.rs  worker.rs
xylem-core/src/transport/: mod.rs  tcp.rs  tls.rs  udp.rs
xylem-core/src/workload/: data_import.rs  distributions.rs  generator.rs  mod.rs  patterns.rs  value_size.rs
xylem-echo-server/: Cargo.toml  README.md
xylem-echo-server/src/: main.rs
xylem-protocols/: Cargo.toml
xylem-protocols/examples/: zeropool_demo.rs
xylem-protocols/src/: configs.rs  echo.rs  factory.rs  http.rs  key_generation_adapter.rs  lib.rs  masstree.rs  protocol.rs  redis.rs  synthetic.rs
xylem-protocols/src/factories/: http.rs  memcached.rs  mod.rs  redis.rs  xylem_echo.rs
xylem-protocols/src/http/: mod.rs
xylem-protocols/src/masstree/: mod.rs
xylem-protocols/src/memcached/: ascii.rs  binary.rs  mod.rs
xylem-protocols/src/redis/: command_selector.rs  command_template.rs  crc16.rs  mod.rs  slot.rs
xylem-protocols/src/redis/cluster/: helpers.rs  mod.rs  protocol.rs  redirect.rs  slots_parser.rs  topology.rs
xylem-protocols/src/workload/: data_import.rs  keys.rs  mod.rs  value_size.rs
xylem-protocols/src/xylem_echo/: mod.rs
xylem-transport/: Cargo.toml
xylem-transport/src/: buffer_pool.rs  hw_timestamp.rs  lib.rs  mux.rs  tcp.rs  timestamp.rs  tls.rs  udp.rs  unix.rs
