[workspace]
members = [
    "xylem-cli",
    "xylem-core", "xylem-echo-server",
    "xylem-protocols", "xylem-transport",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Minhu Wang <minhuw@acm.org"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/minhuw/xylem"

[workspace.dependencies]
# Event loop and networking
mio = { version = "1.1.0", features = ["os-poll", "net"] }
socket2 = "0.6.1"
libc = "0.2"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
rmp-serde = "1.3"

# Statistics
statrs = "0.18"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TLS
rustls = "0.23"
tokio-rustls = "0.26"

# Time
humantime = "2.1"
humantime-serde = "1.1"

# CPU affinity
core_affinity = "0.8"

# Random number generation
rand = { version = "0.9.2", features = ["small_rng"] }
rand_distr = "0.5.1"

# HTTP parsing
httparse = "1.9"

# Bytes utilities
bytes = "1.9"

# TLS certificate handling
rustls-pemfile = "2.2"

[workspace.lints.clippy]
uninlined_format_args = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Profile for profiling with flamegraph
# Use with: cargo flamegraph --profile profiling
[profile.profiling]
inherits = "release"
debug = true       # Enable debug symbols for better flamegraphs
strip = false      # Don't strip symbols
