[package]
name = "xylem-cli"
version = "0.1.0"
edition = "2021"
authors = ["xylem contributors"]
description = "CLI interface for Xylem latency measurement tool"
license = "MIT"
repository = "https://github.com/minhuw/xylem"

[lib]
name = "xylem_cli"
path = "src/lib.rs"

[[bin]]
name = "xylem"
path = "src/main.rs"

[[example]]
name = "redis_basic"
path = "examples/redis_basic.rs"

[[example]]
name = "sketch_precision_comparison"
path = "examples/sketch_precision_comparison.rs"

[lints]
workspace = true

[dependencies]
xylem-core = { path = "../xylem-core", features = ["schema"] }
xylem-protocols = { path = "../xylem-protocols", features = ["schema"] }
xylem-transport = { path = "../xylem-transport" }

clap = { workspace = true }
clap_complete = "4.5"
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
humantime = { workspace = true }
humantime-serde.workspace = true
toml.workspace = true

# Optional evalsync integration for coordinated benchmarking
evalsync = { version = "0.1", optional = true }

[features]
evalsync = ["dep:evalsync"]

[dev-dependencies]
tempfile = "3.8"
