[package]
name = "xylem-core"
version = "0.1.0"
edition = "2021"
authors = ["xylem contributors"]
description = "Core library for Xylem latency measurement tool"
license = "MIT"
repository = "https://github.com/minhuw/xylem"

[lints]
workspace = true

[dependencies]
xylem-transport = { path = "../xylem-transport" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
statrs = { workspace = true }
core_affinity = { workspace = true }
humantime-serde = { workspace = true }

[dev-dependencies]
xylem-protocols = { path = "../xylem-protocols" }
