[package]
name = "xylem-core"
version = "0.1.0"
edition = "2021"
authors = ["xylem contributors"]
description = "Core library for Xylem latency measurement tool"
license = "MIT"
repository = "https://github.com/minhuw/xylem"

[lints]
workspace = true

[dependencies]
xylem-common = { path = "../xylem-common" }
xylem-transport = { path = "../xylem-transport" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { version = "1.1.0", optional = true }
tracing = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
statrs = { workspace = true }
core_affinity = { workspace = true }
humantime-serde = { workspace = true }
csv = { workspace = true }
sha2 = "0.10"
sketches-ddsketch = "0.3.0"
tdigest = "0.2"
hdrhistogram = "7.5"
zeropool = "0.2"

[features]
schema = ["schemars"]

[dev-dependencies]
xylem-protocols = { path = "../xylem-protocols" }
tokio = { version = "1.0", features = ["full"] }
