[package]
name = "xylem-protocols"
version = "0.1.0"
edition = "2021"
authors = ["xylem contributors"]
description = "Protocol implementations for Xylem latency measurement tool"
license = "MIT"
repository = "https://github.com/minhuw/xylem"

[dependencies]
xylem-core = { path = "../xylem-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }
httparse = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
