[package]
name = "xylem-protocols"
version = "0.1.0"
edition = "2021"
authors = ["xylem contributors"]
description = "Protocol implementations for Xylem latency measurement tool"
license = "MIT"
repository = "https://github.com/minhuw/xylem"

[lints]
workspace = true

[dependencies]
xylem-core = { path = "../xylem-core" }
anyhow = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }
httparse = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rmp = "0.8.14"
rmp-serde.workspace = true
