[package]
name = "xylem-protocols"
version = "0.1.0"
edition = "2021"
authors = ["xylem contributors"]
description = "Protocol implementations for Xylem latency measurement tool"
license = "MIT"
repository = "https://github.com/minhuw/xylem"

[lints]
workspace = true

[features]
schema = ["schemars"]

[dependencies]
xylem-core = { path = "../xylem-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { version = "1.1.0", optional = true }
bytes = { workspace = true }
httparse = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rmp = "0.8.14"
rmp-serde.workspace = true
zeropool = "0.2"
