[package]
name = "xylem-transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Transport layer implementations for Xylem latency measurement tool"

[dependencies]
# Networking
socket2 = { workspace = true }
libc = { workspace = true }

# Linux-only: I/O multiplexing via nix (epoll, poll, select)
[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }

# Non-Linux: I/O multiplexing via mio (kqueue on macOS/BSD, IOCP on Windows)
[target.'cfg(not(target_os = "linux"))'.dependencies]
mio = { workspace = true }

[dependencies.anyhow]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.tracing]
workspace = true

[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true
